--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -68,3 +68,17 @@ logging:
 
 swagger:
   show: true
+  #pagehelper
+#pagehelper:
+#    helperDialect: mysql
+#    reasonable: true
+#    supportMethodsArguments: true
+#    params: count=countSql
+#    returnPageInfo: check
+#
+#logging:
+#  level:
+#    cn.luischen.dao : DEBUG
+#
+#swagger:
+#  show: true
