--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -76,6 +76,10 @@ swagger:
 #    params: count=countSql
 #    returnPageInfo: check
 #
+#    params: count=countSql
+#    returnPageInfo: check
+#    params: count=countSql
+#    returnPageInfo: check
 #logging:
 #  level:
 #    cn.luischen.dao : DEBUG
